# law_kyrgyz

./: .gitignore  README.md  emirlan.json  emirlan.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_dateofexpiry_user_date_of_expiry_and_more.py  0003_alter_user_phone_number.py  0004_alter_user_email.py  0005_remove_user_username.py  0006_notification_alter_user_authority_and_more.py
guides/: models.py  serializers.py  urls.py  views.py
guides/migrations/: 0001_initial.py  0002_guide_guide_type.py
main/: settings.py  urls.py
posts/: admin.py  blacklist.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_delete_comment_delete_post.py  0003_initial.py  0004_alter_comment_author_alter_news_author_and_more.py  0005_alter_news_author_alter_post_author.py  0006_alter_news_author_alter_post_author.py  0007_alter_comment_author_alter_news_author_and_more.py  0008_alter_comment_author_alter_news_author_and_more.py  0009_alter_post_author.py  0010_alter_post_author.py  0011_alter_post_author.py  0012_alter_post_author.py  0013_alter_post_author.py  0014_remove_post_comments_comment_post_news_image_and_more.py  0015_guides_news_title.py
